# patience-sort

./: Makefile.am  Makefile.in  README  aminclude_static.am  configure  configure.ac  patience-sort-r.c  patience-sort.c  patience-sort.h  patience-sort.include.c  patience-sort.pc.in
comparisons/: 2022.06.21.13.13.07.out  2022.06.22.10.27.00.out  2022.06.22.13.30.03.out  timer-test.c
tests/: try-int-sort.c  try-stable-sort.c
